# gwas-sumstats-tools

./: .dockerignore  .gitlab-ci.yml  CITATION.cff  Dockerfile  README.md  pyproject.toml  ut
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_question.md
.github/workflows/: publish-pypi.yml
docs/decisions/: 0001-validator.md  0002-deployment.md
gwas_sumstats_formatter/: main.py  sumstats_metadata.py  sumstats_table.py  transformer.py  utils.py
gwas_sumstats_formatter/schema/: data_table.py  metadata.py
gwas_sumstats_formatter/sumstats/: data_table.py
gwas_sumstats_tools/: cli.py  config.py  constants.py  del_format copy.py  format.py  gen_meta.py  main.py  read.py  utils.py  validate.py
gwas_sumstats_tools/interfaces/: data_table.py  del_apply_config.py  del_generate_config.py  metadata.py  metadata_rest.py
gwas_sumstats_tools/schema/: configure_json.py  data_table.py  headermap.py  metadata.py  pre_defined_configure.py
gwas_sumstats_tools/sumstats/: data_table.py  validate_data.py
tests/: prep_tests.py  test_cli.py  test_format.py  test_read.py  test_utils.py  test_validate.py
tests/interfaces/: test_data_table.py  test_gen_meta.py
