[tool.poetry]
name = "gwas-sumstats-tools"
version = "0.1.1a2"
description = ""
authors = ["jdhayhurst <jhayhurst@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "gwas_sumstats_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
petl = "^1.7.12"
requests = "^2.28.2"
pyyaml = "^6.0"
pydantic = "^1.10.4"
typer = {extras = ["all"], version = "^0.7.0"}
pandera = {extras = ["io"], version = "^0.13.4"}
hypothesis = "^6.68.2"

[tool.poetry.scripts]
gwas-ssf = "gwas_sumstats_tools.cli:app"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"