[tool.poetry]
name = "gwas-sumstats-tools"
version = "1.0.11"
description = ""
authors = ["jdhayhurst <jhayhurst@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "gwas_sumstats_tools"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
petl = "^1.7.12"
requests = "^2.28.2"
pyyaml = "^6.0"
pydantic = "^1.10.4"
typer = {extras = ["all"], version = "^0.7.0"}
pandera = {extras = ["io"], version = "^0.13.4"}
pandas = "^2.0.2"
ruamel-yaml = "^0.18.5"

[tool.poetry.scripts]
gwas-ssf = "gwas_sumstats_tools.cli:app"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
hypothesis = "^6.68.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
